# legend-pygeom-l200

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  pyproject.toml  setup.cfg
.github/workflows/: main.yml  pre-commit.yml
docs/: Makefile
docs/source/: .py_api_exclude  calibration.md  cfg-calibration.md  cfg-geometry.md  cfg-materials.md  conf.py  coordinate_systems.rst  description.md  geom-dev.md  index.md  index.rst  naming.md  runtime-cfg.md  vis.md
src/l200geom/: __init__.py  calibration.py  cli.py  core.py  cryo.py  det_utils.py  fibers.py  gearray.py  hpge_strings.py  metadata.py  top.py  vis_utils.py  watertank.py  wlsr.py
src/l200geom/configs/: README.md  dummy_array_config.json  l200-p03-r%-T%-all-config.json  l200-p03-r%-T%-all-config.yaml  validity.jsonl
src/l200geom/configs/dummy_geom/: B99000A.json  README.md  channelmap.json
src/l200geom/configs/extra_meta/: README.md  l200-p03-r%-T%-all-config.yaml  l200-p14-r%-T%-all-config.yaml  validity.jsonl  validity.yaml
src/l200geom/materials/: __init__.py  ketek_sipm.py  surfaces.py
src/l200geom/models/: BasePlate_large.stl  BasePlate_medium.stl  BasePlate_medium_ortec.stl  BasePlate_small.stl  BasePlate_xlarge.stl  README.md  StringSupportStructure-short.stl  StringSupportStructure.stl  TopPlate.stl  TopPlate_ppc.stl  TriStar_large.stl  TriStar_medium.stl  TriStar_small.stl  TriStar_xlarge.stl
tests/: test_calib.py  test_cli.py  test_core.py
tests/test_cfg/: cfg_central.yaml  cfg_geom.yaml  channelmap_spms_dummy.json  matprop_change.py  special_central.yaml
